force-app/main/default/objects/RH_Message_Configuration__mdt/RH_Message_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Message Configuration</label>
    <pluralLabel>Message Configurations</pluralLabel>
</CustomObject>