force-app/main/default/objects/RH_Message_Configuration__mdt/fields/RH_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>RH_Class_Name__c</fullName>
    <defaultValue>&apos;RH_telegramMessageConfigImpl&apos;</defaultValue>
    <inlineHelpText>the class which implement the RH_telegramMessageConfigInterface , defalut RH_telegramMessageConfigImpl</inlineHelpText>
    <label>Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>