force-app/main/default/objects/RH_Message_Configuration__mdt/fields/RH_fields__c.field-meta.xml
<CustomField>
    <fullName>RH_fields__c</fullName>
    <description>merged fields contained in the template, separated by semi colon {,)</description>
    <inlineHelpText>merged fields contained in the template, separated by semi colon {,)</inlineHelpText>
    <label>fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>