force-app/main/default/objects/RH_Message_Configuration__mdt/fields/RH_ObjectApiName__c.field-meta.xml
<CustomField>
    <fullName>RH_ObjectApiName__c</fullName>
    <label>Object Api Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>