force-app/main/default/objects/RH_Message_Configuration__mdt/fields/RH_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>RH_Template_Name__c</fullName>
    <label>Template Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>